chap3/y.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: assignexp

    3 assignexp: lvalue ASSIGN assignexp
    4          | orexp

    5 orexp: andexp ortail

    6 ortail: /* empty */
    7       | OR andexp ortail

    8 andexp: relexp andtail

    9 andtail: /* empty */
   10        | AND relexp andtail

   11 relexp: addexp reltail

   12 reltail: /* empty */
   13        | relop addexp

   14 relop: EQ
   15      | NEQ
   16      | LT
   17      | LE
   18      | GT
   19      | GE

   20 addexp: mulexp addtail

   21 addtail: /* empty */
   22        | PLUS mulexp addtail
   23        | MINUS mulexp addtail

   24 mulexp: unaryexp multail

   25 multail: /* empty */
   26        | TIMES unaryexp multail
   27        | DIVIDE unaryexp multail

   28 unaryexp: MINUS unaryexp
   29         | atomexp

   30 atomexp: NIL
   31        | INT
   32        | STRING
   33        | BREAK
   34        | LPAREN explist_opt RPAREN
   35        | idexp
   36        | IF exp THEN exp
   37        | IF exp THEN exp ELSE exp
   38        | WHILE exp DO exp
   39        | FOR ID ASSIGN exp TO exp DO exp
   40        | LET decs_opt IN explist_opt END

   41 idexp: ID idsuffix

   42 lvalue: ID lvaluetail

   43 idsuffix: /* empty */
   44         | LPAREN args_opt RPAREN
   45         | LBRACE recfields_opt RBRACE
   46         | lvstart

   47 lvstart: DOT ID lvaluetail
   48        | LBRACK exp RBRACK subsuffix

   49 subsuffix: OF exp
   50          | lvaluetail

   51 lvaluetail: /* empty */
   52           | DOT ID lvaluetail
   53           | LBRACK exp RBRACK lvaluetail

   54 explist_opt: /* empty */
   55            | explist

   56 explist: exp
   57        | explist SEMICOLON exp

   58 args_opt: /* empty */
   59         | args

   60 args: exp
   61     | args COMMA exp

   62 recfields_opt: /* empty */
   63              | recfields

   64 recfields: recfield
   65          | recfields COMMA recfield

   66 recfield: ID EQ exp

   67 decs_opt: /* empty */
   68         | decs

   69 decs: dec
   70     | decs dec

   71 dec: typedec
   72    | vardec
   73    | fundec

   74 typedec: TYPE ID EQ ty

   75 vardec: VAR ID ASSIGN exp
   76       | VAR ID COLON ID ASSIGN exp

   77 fundec: FUNCTION ID LPAREN tyfields_opt RPAREN EQ exp
   78       | FUNCTION ID LPAREN tyfields_opt RPAREN COLON ID EQ exp

   79 ty: ID
   80   | LBRACE tyfields_opt RBRACE
   81   | ARRAY OF ID

   82 tyfields_opt: /* empty */
   83             | tyfields

   84 tyfields: tyfield
   85         | tyfields COMMA tyfield

   86 tyfield: ID COLON ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 39 41 42 47 52 66 74 75 76 77 78 79 81 86
STRING (259) 32
INT (260) 31
COMMA (261) 61 65 85
COLON (262) 76 78 86
SEMICOLON (263) 57
LPAREN (264) 34 44 77 78
RPAREN (265) 34 44 77 78
LBRACK (266) 48 53
RBRACK (267) 48 53
LBRACE (268) 45 80
RBRACE (269) 45 80
DOT (270) 47 52
PLUS (271) 22
MINUS (272) 23 28
TIMES (273) 26
DIVIDE (274) 27
EQ (275) 14 66 74 77 78
NEQ (276) 15
LT (277) 16
LE (278) 17
GT (279) 18
GE (280) 19
AND (281) 10
OR (282) 7
ASSIGN (283) 3 39 75 76
ARRAY (284) 81
IF (285) 36 37
THEN (286) 36 37
ELSE (287) 37
WHILE (288) 38
FOR (289) 39
TO (290) 39
DO (291) 38 39
LET (292) 40
IN (293) 40
END (294) 40
OF (295) 49 81
BREAK (296) 33
NIL (297) 30
FUNCTION (298) 77 78
VAR (299) 75 76
TYPE (300) 74
ORLOW (301)
ANDLOW (302)
RELOW (303)
ADDLOW (304)
MULLOW (305)
IFX (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
exp (54)
    on left: 2, on right: 1 36 37 38 39 48 49 53 56 57 60 61 66 75
    76 77 78
assignexp (55)
    on left: 3 4, on right: 2 3
orexp (56)
    on left: 5, on right: 4
ortail (57)
    on left: 6 7, on right: 5 7
andexp (58)
    on left: 8, on right: 5 7
andtail (59)
    on left: 9 10, on right: 8 10
relexp (60)
    on left: 11, on right: 8 10
reltail (61)
    on left: 12 13, on right: 11
relop (62)
    on left: 14 15 16 17 18 19, on right: 13
addexp (63)
    on left: 20, on right: 11 13
addtail (64)
    on left: 21 22 23, on right: 20 22 23
mulexp (65)
    on left: 24, on right: 20 22 23
multail (66)
    on left: 25 26 27, on right: 24 26 27
unaryexp (67)
    on left: 28 29, on right: 24 26 27 28
atomexp (68)
    on left: 30 31 32 33 34 35 36 37 38 39 40, on right: 29
idexp (69)
    on left: 41, on right: 35
lvalue (70)
    on left: 42, on right: 3
idsuffix (71)
    on left: 43 44 45 46, on right: 41
lvstart (72)
    on left: 47 48, on right: 46
subsuffix (73)
    on left: 49 50, on right: 48
lvaluetail (74)
    on left: 51 52 53, on right: 42 47 50 52 53
explist_opt (75)
    on left: 54 55, on right: 34 40
explist (76)
    on left: 56 57, on right: 55 57
args_opt (77)
    on left: 58 59, on right: 44
args (78)
    on left: 60 61, on right: 59 61
recfields_opt (79)
    on left: 62 63, on right: 45
recfields (80)
    on left: 64 65, on right: 63 65
recfield (81)
    on left: 66, on right: 64 65
decs_opt (82)
    on left: 67 68, on right: 40
decs (83)
    on left: 69 70, on right: 68 70
dec (84)
    on left: 71 72 73, on right: 69 70
typedec (85)
    on left: 74, on right: 71
vardec (86)
    on left: 75 76, on right: 72
fundec (87)
    on left: 77 78, on right: 73
ty (88)
    on left: 79 80 81, on right: 74
tyfields_opt (89)
    on left: 82 83, on right: 77 78 80
tyfields (90)
    on left: 84 85, on right: 83 85
tyfield (91)
    on left: 86, on right: 84 85


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program    go to state 12
    exp        go to state 13
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 1

   41 idexp: ID . idsuffix
   42 lvalue: ID . lvaluetail

    LPAREN  shift, and go to state 24
    LBRACK  shift, and go to state 25
    LBRACE  shift, and go to state 26
    DOT     shift, and go to state 27

    ASSIGN    reduce using rule 51 (lvaluetail)
    $default  reduce using rule 43 (idsuffix)

    idsuffix    go to state 28
    lvstart     go to state 29
    lvaluetail  go to state 30


state 2

   32 atomexp: STRING .

    $default  reduce using rule 32 (atomexp)


state 3

   31 atomexp: INT .

    $default  reduce using rule 31 (atomexp)


state 4

   34 atomexp: LPAREN . explist_opt RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 54 (explist_opt)

    exp          go to state 31
    assignexp    go to state 14
    orexp        go to state 15
    andexp       go to state 16
    relexp       go to state 17
    addexp       go to state 18
    mulexp       go to state 19
    unaryexp     go to state 20
    atomexp      go to state 21
    idexp        go to state 22
    lvalue       go to state 23
    explist_opt  go to state 32
    explist      go to state 33


state 5

   28 unaryexp: MINUS . unaryexp

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    unaryexp  go to state 35
    atomexp   go to state 21
    idexp     go to state 22


state 6

   36 atomexp: IF . exp THEN exp
   37        | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 36
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 7

   38 atomexp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 37
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 8

   39 atomexp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 38


state 9

   40 atomexp: LET . decs_opt IN explist_opt END

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    $default  reduce using rule 67 (decs_opt)

    decs_opt  go to state 42
    decs      go to state 43
    dec       go to state 44
    typedec   go to state 45
    vardec    go to state 46
    fundec    go to state 47


state 10

   33 atomexp: BREAK .

    $default  reduce using rule 33 (atomexp)


state 11

   30 atomexp: NIL .

    $default  reduce using rule 30 (atomexp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 48


state 13

    1 program: exp .

    $default  reduce using rule 1 (program)


state 14

    2 exp: assignexp .

    $default  reduce using rule 2 (exp)


state 15

    4 assignexp: orexp .

    $default  reduce using rule 4 (assignexp)


state 16

    5 orexp: andexp . ortail

    OR  shift, and go to state 49

    $default  reduce using rule 6 (ortail)

    ortail  go to state 50


state 17

    8 andexp: relexp . andtail

    AND  shift, and go to state 51

    $default  reduce using rule 9 (andtail)

    andtail  go to state 52


state 18

   11 relexp: addexp . reltail

    EQ   shift, and go to state 53
    NEQ  shift, and go to state 54
    LT   shift, and go to state 55
    LE   shift, and go to state 56
    GT   shift, and go to state 57
    GE   shift, and go to state 58

    $default  reduce using rule 12 (reltail)

    reltail  go to state 59
    relop    go to state 60


state 19

   20 addexp: mulexp . addtail

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    $default  reduce using rule 21 (addtail)

    addtail  go to state 63


state 20

   24 mulexp: unaryexp . multail

    TIMES   shift, and go to state 64
    DIVIDE  shift, and go to state 65

    $default  reduce using rule 25 (multail)

    multail  go to state 66


state 21

   29 unaryexp: atomexp .

    $default  reduce using rule 29 (unaryexp)


state 22

   35 atomexp: idexp .

    $default  reduce using rule 35 (atomexp)


state 23

    3 assignexp: lvalue . ASSIGN assignexp

    ASSIGN  shift, and go to state 67


state 24

   44 idsuffix: LPAREN . args_opt RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 58 (args_opt)

    exp        go to state 68
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23
    args_opt   go to state 69
    args       go to state 70


state 25

   48 lvstart: LBRACK . exp RBRACK subsuffix
   53 lvaluetail: LBRACK . exp RBRACK lvaluetail

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 71
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 26

   45 idsuffix: LBRACE . recfields_opt RBRACE

    ID  shift, and go to state 72

    $default  reduce using rule 62 (recfields_opt)

    recfields_opt  go to state 73
    recfields      go to state 74
    recfield       go to state 75


state 27

   47 lvstart: DOT . ID lvaluetail
   52 lvaluetail: DOT . ID lvaluetail

    ID  shift, and go to state 76


state 28

   41 idexp: ID idsuffix .

    $default  reduce using rule 41 (idexp)


state 29

   46 idsuffix: lvstart .

    $default  reduce using rule 46 (idsuffix)


state 30

   42 lvalue: ID lvaluetail .

    $default  reduce using rule 42 (lvalue)


state 31

   56 explist: exp .

    $default  reduce using rule 56 (explist)


state 32

   34 atomexp: LPAREN explist_opt . RPAREN

    RPAREN  shift, and go to state 77


state 33

   55 explist_opt: explist .
   57 explist: explist . SEMICOLON exp

    SEMICOLON  shift, and go to state 78

    $default  reduce using rule 55 (explist_opt)


state 34

   41 idexp: ID . idsuffix

    LPAREN  shift, and go to state 24
    LBRACK  shift, and go to state 79
    LBRACE  shift, and go to state 26
    DOT     shift, and go to state 80

    $default  reduce using rule 43 (idsuffix)

    idsuffix  go to state 28
    lvstart   go to state 29


state 35

   28 unaryexp: MINUS unaryexp .

    $default  reduce using rule 28 (unaryexp)


state 36

   36 atomexp: IF exp . THEN exp
   37        | IF exp . THEN exp ELSE exp

    THEN  shift, and go to state 81


state 37

   38 atomexp: WHILE exp . DO exp

    DO  shift, and go to state 82


state 38

   39 atomexp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 83


state 39

   77 fundec: FUNCTION . ID LPAREN tyfields_opt RPAREN EQ exp
   78       | FUNCTION . ID LPAREN tyfields_opt RPAREN COLON ID EQ exp

    ID  shift, and go to state 84


state 40

   75 vardec: VAR . ID ASSIGN exp
   76       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 85


state 41

   74 typedec: TYPE . ID EQ ty

    ID  shift, and go to state 86


state 42

   40 atomexp: LET decs_opt . IN explist_opt END

    IN  shift, and go to state 87


state 43

   68 decs_opt: decs .
   70 decs: decs . dec

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    $default  reduce using rule 68 (decs_opt)

    dec      go to state 88
    typedec  go to state 45
    vardec   go to state 46
    fundec   go to state 47


state 44

   69 decs: dec .

    $default  reduce using rule 69 (decs)


state 45

   71 dec: typedec .

    $default  reduce using rule 71 (dec)


state 46

   72 dec: vardec .

    $default  reduce using rule 72 (dec)


state 47

   73 dec: fundec .

    $default  reduce using rule 73 (dec)


state 48

    0 $accept: program $end .

    $default  accept


state 49

    7 ortail: OR . andexp ortail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    andexp    go to state 89
    relexp    go to state 17
    addexp    go to state 18
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22


state 50

    5 orexp: andexp ortail .

    $default  reduce using rule 5 (orexp)


state 51

   10 andtail: AND . relexp andtail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    relexp    go to state 90
    addexp    go to state 18
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22


state 52

    8 andexp: relexp andtail .

    $default  reduce using rule 8 (andexp)


state 53

   14 relop: EQ .

    $default  reduce using rule 14 (relop)


state 54

   15 relop: NEQ .

    $default  reduce using rule 15 (relop)


state 55

   16 relop: LT .

    $default  reduce using rule 16 (relop)


state 56

   17 relop: LE .

    $default  reduce using rule 17 (relop)


state 57

   18 relop: GT .

    $default  reduce using rule 18 (relop)


state 58

   19 relop: GE .

    $default  reduce using rule 19 (relop)


state 59

   11 relexp: addexp reltail .

    $default  reduce using rule 11 (relexp)


state 60

   13 reltail: relop . addexp

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    addexp    go to state 91
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22


state 61

   22 addtail: PLUS . mulexp addtail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    mulexp    go to state 92
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22


state 62

   23 addtail: MINUS . mulexp addtail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    mulexp    go to state 93
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22


state 63

   20 addexp: mulexp addtail .

    $default  reduce using rule 20 (addexp)


state 64

   26 multail: TIMES . unaryexp multail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    unaryexp  go to state 94
    atomexp   go to state 21
    idexp     go to state 22


state 65

   27 multail: DIVIDE . unaryexp multail

    ID      shift, and go to state 34
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    unaryexp  go to state 95
    atomexp   go to state 21
    idexp     go to state 22


state 66

   24 mulexp: unaryexp multail .

    $default  reduce using rule 24 (mulexp)


state 67

    3 assignexp: lvalue ASSIGN . assignexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    assignexp  go to state 96
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 68

   60 args: exp .

    $default  reduce using rule 60 (args)


state 69

   44 idsuffix: LPAREN args_opt . RPAREN

    RPAREN  shift, and go to state 97


state 70

   59 args_opt: args .
   61 args: args . COMMA exp

    COMMA  shift, and go to state 98

    $default  reduce using rule 59 (args_opt)


state 71

   48 lvstart: LBRACK exp . RBRACK subsuffix
   53 lvaluetail: LBRACK exp . RBRACK lvaluetail

    RBRACK  shift, and go to state 99


state 72

   66 recfield: ID . EQ exp

    EQ  shift, and go to state 100


state 73

   45 idsuffix: LBRACE recfields_opt . RBRACE

    RBRACE  shift, and go to state 101


state 74

   63 recfields_opt: recfields .
   65 recfields: recfields . COMMA recfield

    COMMA  shift, and go to state 102

    $default  reduce using rule 63 (recfields_opt)


state 75

   64 recfields: recfield .

    $default  reduce using rule 64 (recfields)


state 76

   47 lvstart: DOT ID . lvaluetail
   52 lvaluetail: DOT ID . lvaluetail

    LBRACK  shift, and go to state 103
    DOT     shift, and go to state 104

    $default  reduce using rule 51 (lvaluetail)

    lvaluetail  go to state 105


state 77

   34 atomexp: LPAREN explist_opt RPAREN .

    $default  reduce using rule 34 (atomexp)


state 78

   57 explist: explist SEMICOLON . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 106
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 79

   48 lvstart: LBRACK . exp RBRACK subsuffix

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 107
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 80

   47 lvstart: DOT . ID lvaluetail

    ID  shift, and go to state 108


state 81

   36 atomexp: IF exp THEN . exp
   37        | IF exp THEN . exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 109
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 82

   38 atomexp: WHILE exp DO . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 110
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 83

   39 atomexp: FOR ID ASSIGN . exp TO exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 111
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 84

   77 fundec: FUNCTION ID . LPAREN tyfields_opt RPAREN EQ exp
   78       | FUNCTION ID . LPAREN tyfields_opt RPAREN COLON ID EQ exp

    LPAREN  shift, and go to state 112


state 85

   75 vardec: VAR ID . ASSIGN exp
   76       | VAR ID . COLON ID ASSIGN exp

    COLON   shift, and go to state 113
    ASSIGN  shift, and go to state 114


state 86

   74 typedec: TYPE ID . EQ ty

    EQ  shift, and go to state 115


state 87

   40 atomexp: LET decs_opt IN . explist_opt END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 54 (explist_opt)

    exp          go to state 31
    assignexp    go to state 14
    orexp        go to state 15
    andexp       go to state 16
    relexp       go to state 17
    addexp       go to state 18
    mulexp       go to state 19
    unaryexp     go to state 20
    atomexp      go to state 21
    idexp        go to state 22
    lvalue       go to state 23
    explist_opt  go to state 116
    explist      go to state 33


state 88

   70 decs: decs dec .

    $default  reduce using rule 70 (decs)


state 89

    7 ortail: OR andexp . ortail

    OR  shift, and go to state 49

    $default  reduce using rule 6 (ortail)

    ortail  go to state 117


state 90

   10 andtail: AND relexp . andtail

    AND  shift, and go to state 51

    $default  reduce using rule 9 (andtail)

    andtail  go to state 118


state 91
